--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: #420068;
+  background-color: #005d59;
 }
 
 .app {
@@ -33,13 +33,14 @@ h2 {
   margin-top: 0.8em;
   width: 20em;
   height: 2em;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 6px;
   padding: 5px;
   font-weight: 100;
+  border:1px solid white;
 }
 
 .app .input input {
@@ -47,13 +48,30 @@ h2 {
   height: 1.6em;
   border-color: transparent;
   outline-color: transparent;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(38, 1, 59);
+  opacity: 1; /* Firefox */
+}
+input:focus {
+  outline-width: 0;
 }
 
 .app i {
   cursor: pointer;
   font-size: larger;
   font-weight: 900;
-  color: grey;
+  color: rgb(25, 0, 78);
+  margin-right: 5px;
+}
+.todo i {
+  cursor: pointer;
+  font-size: larger;
+  font-weight: 900;
+  color: rgb(224, 218, 218);
   margin-right: 5px;
 }
 .app .todos {
@@ -66,7 +84,7 @@ h2 {
   margin-top: 0.8em;
   width: 20em;
   height: 2em;
-  background-color: white;
+  background-color: rgb(15, 149, 149);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -80,9 +98,9 @@ h2 {
 }
 
 .app .todos .todo .left p {
-  margin-left: 3px;
+  margin-left: 5px;
   font-size: medium;
   font-weight: 700;
   font-style: normal;
-  color: grey;
+  color: rgb(40, 0, 63);
 }
